--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ seo_title: "Buy Altcoins World Wide: Get Started with Altcoins"
 </div>
 
 <h2> <a href="/altcoins/">Learn about Altcoins</a></h2>
-<p> <a href = "/altcoins/">This section</a> will teach you how to buy, mine and store Altcoins such as Ethereum, Litecoin, and Ripple.</p>
+<p> <a href = "/altcoins/">This section</a> will show you how to buy store Altcoins such as Ethereum, Litecoin, and Ripple.</p>
 
 <h2> <a href="/wallets/">Learn about Wallets</a></h2>
 <p> <a href = "/wallets/"> Click here</a> to learn how to securely store your cryptocurrency on various kinds of wallets. In order to buy altcoins, you will need a wallet (or wallets) in which to store them.</p>
